# Lightroot

./: .env  README.md  eidos.py  eidos_memory.json  pyproject.toml  run_lightroot.ps1  test_openai.py
adapters/: cli.py  gpt_adapter.py
core/: eidos.py  memory_manager.py  signal_parser.py
docs/: structure.md
examples/: interactive_nomad.py
nomad/: base_nomad.py
